[5-4] feat: Build API to store customized lyric